--- a/k-前端狂想录群的日常问题清单以及解决方案/2019-04-上旬.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/2019-04-上旬.md
@@ -21,16 +21,165 @@ weixin147CY  此哥们写过一个这种组件。请联系他微信号
 
 
 #### 问题描述
-大家有用过这样的vue组件吗？日历组件，上下要有倾斜的幅度的
+![](https://user-gold-cdn.xitu.io/2019/6/13/16b4e6c01f850c34?w=723&h=502&f=png&s=55895)
+
+
+![](https://user-gold-cdn.xitu.io/2019/6/13/16b4e6c578bb1f8b?w=875&h=208&f=png&s=47317)
+
+运行时报错
 
 #### 问题解答
-weixin147CY  此哥们写过一个这种组件。请联系他微信号
+
+mode 实际上就是定义process.env.NODE_ENV。上面的两张图是重复定义了，所以报错了。
 
 ### NO4
 
 
 #### 问题描述
-大家有用过这样的vue组件吗？日历组件，上下要有倾斜的幅度的
+dva的model可以写单测吗
 
 #### 问题解答
-weixin147CY  此哥们写过一个这种组件。请联系他微信号
+
+> https://www.jianshu.com/p/5cda9724e14e
+
+
+### NO4
+
+
+#### 问题描述
+拍照的图片太大，前端压缩图片，有什么好的方案
+
+#### 问题解答
+
+1. picdiet.js
+2. canvas压缩
+3. https://github.com/bosscheng/canvas-rotate-image  结合 exif.js
+
+
+
+### 其他问题
+
+
+#### 1
+
+大神们，我们使用 H5 做移动 App，或者进行移动网站开发时。如果文本输入框在整个页面的下方，当我们点击输入框要输入文字时，系统弹出的虚拟键盘就会将输入框给挡住，怎么解决？
+
+
+
+#### 2
+
+你们用什么工具将本地项目打包到线上啊
+
+
+#### 3
+
+前后端分离前端模拟后台接口你们都是怎么搞的
+
+1. mock.js 
+2. magic tools: DOClever  ------ 大部分时间用doclever 只是用来约束java的- - ，我的java小伙伴容易放飞自我，然后改字段
+3. easy mock
+
+
+#### 4
+
+问个移动端适配的问题。我写的 html中 font-size: 13.3333vw;那么在750px的设计稿中  1rem也就等于100px了。长度宽度都没问题，但是我的字体转换后出奇的大，什么原因
+
+
+#### 5
+
+另一个管理系统嵌入vue写的管理系统该怎么嵌入。另个系统还没上线，只能在本地和测试环境下跑
+
+
+#### 6
+
+纯css怎么实现，兼容ie7
+三栏布局  25% 50% 25%
+三栏都限制最小宽度，如（320px,640px,320px）
+在窗口满足最小宽度时，宽度始终为（320px,640px,320px）
+
+
+#### 7
+长期对着电脑工作，应该如何选择眼药水？
+
+1. 日本的FX眼药水挺好用
+
+#### 8
+
+nodejs是不是不能实现ping？
+
+1. https://github.com/QuantumSheep/node-icmp/blob/master/index.js
+  
+> 不过其实这种东西嘛，也不一定非要用 node 去实现它。可以有很多种方案的。
+1、子进程调用 ping 命令，解析返回的结果
+2、C++ 扩展使用 ICMP 协议
+3、通过 TCP 确定网络连通性
+4、通过 node.js 通过 SOCK_RAW 简单实现 
+
+
+#### 9
+
+群友遇到的面试题
+
+1. 写过 webpack 的 loader吗。 Loader为什么是function，Plugin为什么是class
+2. 口述观察者模式
+3. 手写Bind
+4. 说一说 vuex  为什么需要commit 这么麻烦的步骤，直接改就是了，vue为什么要这么做
+
+
+#### 10
+
+问大家一个css问题，为啥他俩之间有缝隙呢，pc正常，用手机模式浏览就有缝隙
+
+1. 缺少 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 设置。少了 viewport 的设置
+
+
+### 其他
+
+#### 1
+
+既有数组又有对象的数据该怎么确保属性值都有效，比如表单验证
+
+1. 递归
+2. 遍历一下，碰到数组就拍平再读key，碰到对象就直接读key
+3. async-validator 或者 orm 或者 yup 或者 joi
+
+
+#### 2
+
+antd table组件在没让里面的内容轮播。表头固定，滚动table
+
+1. 在table上写个 transition: transform .3s ease-out;然后用 js 控制transform的值
+2. scrollBy
+  
+
+```css
+.ant-table-wrapper ::-webkit-scrollbar
+{
+width: 0px;
+height: 0px;
+background-color: #F5F5F5;
+}
+
+/*定义滚动条轨道 内阴影+圆角*/
+.ant-table-wrapper ::-webkit-scrollbar-track
+{
+box-shadow: inset 0 0 1px rgba(0,0,0,0);
+border-radius: 10px;
+background-color: #F5F5F5;
+}
+
+/*定义滑块 内阴影+圆角*/
+.ant-table-wrapper ::-webkit-scrollbar-thumb
+{
+border-radius: 0;
+box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+background-color: #f00;
+}
+```
+  
+#### 2
+
+create-react-app 生成的项目 怎么配置使用less
+
+1. 如果要自定义配置文件，需要eject
+
