--- a/k-前端狂想录群的日常问题清单以及解决方案/2019-04-下旬.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/2019-04-下旬.md
@@ -1,14 +1,136 @@
 ### NO1
 
 #### 问题描述
-vue 怎么让二级路由和三级路由走同一个 keep-alive
+```js
+[
+{id: 1, parentId: -1, name: 1},
+{id: 2, parentId: 1, name: 2},
+{id: 3, parentId: 2, name: 3}
+]
+
+怎么处理成 
+
+{
+ id: 1,
+ parentId: -1,
+ name: 1,
+ children: [
+  {
+   id: 2,
+   parentId: 1,
+   name: 2,
+   children: [
+    {
+     id: 3
+    }
+   ]
+  }
+ ]
+}
+```
 
 #### 问题解答
-无法走同一个 keep-alive
+
+1. map
+2. reduce
+3. 递归
 
 ### NO2
 
 #### 问题描述
+怎么修改element-ui的字体样式，我用!importrant覆盖不了他原有的样式。
 
 
 #### 问题解答
+不要用deep，不要用scoped 直接在根组件重写class的样式，覆盖掉。类似reset的概念
+
+
+### 其他问题
+
+#### 1
+
+分片，上传进度条，用什么比较好。
+
+1. setTimeout 和 节流 
+
+
+#### 2
+
+在业务组件嵌套很深的情况下如何保持 BEM
+
+1. 感觉用bem后期找一个样式要找好久
+2. 文件名 vue 的 component 的 name 还有 class 都是一样的
+
+
+#### 3
+
+lodash 什么场景好用
+
+1. B端业务随便用，debounce和throttle都好用
+
+#### 4
+
+1. vuex-pathify 推荐, 再也不用写一堆的 mutation 和 getter 了
+2. vuex-orm 推荐, 结合,vuex-orm axios ,简直是crud 神器, 后端接口也要约定好
+3. joi
+
+
+#### 5
+
+element ui table得formatter我想给他返回html标签可以吗
+
+1. 用插槽啊 <template slot-scope="scope"></template > 绑到v-html上就能传过去了
+2. 你可以给他加个props啊，要用的地方就为true，默认不显示就好了啊
+3. v-html要慎用哟
+
+#### 6
+
+各位大佬，react项目里埋点，有什么好的方案吗。我要打死业务怎么办？
+
+1. 通用数据sdk统一打点 独特的数据通过HOC集中到一起，尽量和业务解耦吧
+2. 想过这种方式，不过层次会多一层，每次埋点的地方都要用HOC替换。vue里面可以使用指令实现，react没有这种功能
+3. 死业务也要集中 埋点格式 数据都要集中一下 暴露一个方法给业务组件调用就好了
+4.  组件导出的时候用HOC包一下就好了 其实没什么耦合 fragement也不会增加实际的DOM层次
+
+
+#### 7
+
+axios的拦截器能做什么
+
+1. 增加全局加载
+
+#### 8
+
+你们富文本编辑器用的是什么？
+
+1. VueQuilEditor
+
+#### 9
+
+get方法的 queryString 是不是只能传 string？  不能 number 或 bool  之类的？
+
+1. http协议不认识数据结构，传的都是字符串，后台接收，把字符串转成对应的数据结构，比如nodejs转成json，php转成array
+
+#### 10
+
+使用vue router 点击浏览器的后退按钮 你们知道其中执行了什么操作吗，有的页面按后退 返回的404页面[捂脸] 是路由配置有啥问题吗
+
+1. 看样子是history模式，history模式服务器需要设置下重定向，建议不要用history，麻烦太多
+2. 建议调试用hash，上线再改成history
+3. devServer有个配置项 historyApiFallback 设置为true试试
+
+
+#### 11
+
+使用mock.js总是拦截不到ajax请求
+
+1. 应该是开了proxy，把整个proxy注释掉试试
+2. 因为影响到mock，所以没用dva 和umi
+
+
+#### 12
+
+react怎么配置路由懒加载
+
+1. [脑阔疼的webpack按需加载](https://juejin.im/post/5bf61082f265da616a474b5c)
+2. [如何搭建一个REACT全家桶框架](https://juejin.im/post/5c9d88ea6fb9a070c6189d69#heading-19)
