--- a/k-前端狂想录群的日常问题清单以及解决方案/2019-04-中旬.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/2019-04-中旬.md
@@ -1,10 +1,20 @@
 ### NO1
 
 #### 问题描述
-vue 怎么让二级路由和三级路由走同一个 keep-alive
+axios跨域问题怎么解决
+
+> 状态码200 但是报错 axios 也设置了请求头
 
 #### 问题解答
-无法走同一个 keep-alive
+
+> 第一个解决方案：
+
+前端 起一个 proxy 走转发，比如在package.json中增加一个proxy字段
+
+> 第二个解决方案：
+
+让后端配置一下，设置好跨域  比如   Access-Control-Allow-Origin: '*'``
+
 
 ### NO2
 
@@ -12,3 +22,122 @@ vue 怎么让二级路由和三级路由走同一个 keep-alive
 
 
 #### 问题解答
+
+
+
+### 其他问题
+
+
+#### 1
+
+为什么 npm run serve 就可以 直接运行vue-cli-service serve就不行了
+
+1. 因为你没有全局安装   要 `npx vue-cli-service serve`
+
+#### 2
+
+h5 input 输入框 吊起键盘输入文字 之后 怎么下来
+
+1. scrollIntoView 可以解决这个问题
+
+#### 3
+
+cors问题
+
+1. 要么在服务器加cors 要么你本地用个chrome 的 acess alow插件
+
+
+#### 4
+
+![](https://user-gold-cdn.xitu.io/2019/6/19/16b6d4bc4666e218?w=1451&h=723&f=png&s=251787)
+
+
+![](https://user-gold-cdn.xitu.io/2019/6/19/16b6d4bd828cf085?w=1152&h=111&f=png&s=21825)
+
+如果所示，请教一个问题，这里有 i 个 p 元素, 循环改变 每一个p的width的时候，
+为什么只有一次 Recalculate Style ？
+
+1. 可能是浏览器的问题，重绘回合并，在chrome中，reflow 也会合并
+
+#### 5
+
+在用Flux架构解决了mvc数据混乱的问题之后，mvvm比mvc还有什么优势么...
+
+
+#### 6
+
+请教一个问题 在开发chrome插件的时候如何让插件打开一个我自带的html页面
+
+#### 7
+
+你们在写组件库的时候，单个组件的样式是写在组件目录里，还是写在单独的style中。
+
+1. 我更倾向一种混合式的模式。
+有一个module，里面维护着 color.less、block.less......diy.less
+虽然大部分时候，ui框架足够强大，但是细节的定制化却难以权衡。
+更多时候diyElement 成为一种选择，一般这些细节定制化，还是写在对应组件内，经过长期的这么干，觉得两者混合起来写，能剩不少力气，也不用把自己局限在某个ui框架上
+
+1. 从个人角度看怎么方便debug 就怎么来😂
+
+
+#### 8
+
+写项目时，前端的功能模块，目前已什么样的方式输写会比较好呀；以下两种方式，哪种会多一点呢；   
+
+1. 方式一： 功能分类（所有controller放一个目录，所有service放一个目录，所有dto放一个目录，所有配置放一个目录,等。。。）
+2. 方式二：模块分类(以业务模块归类，将一个业务对应的controller，service，dto，entity等放在一个目录下)
+
+#### 9
+
+我在发布更新新版本的时候，用户恰巧打开系统，此时用户访问的是浏览器之前缓存的页面和数据，但是刷新一下页面之后就不会有这种问题了   有什么好的办法或者思路可以提供吗？
+
+1. SSE 长连接 成本高
+2. 关键问题就是检查静态资源版本和最新版本是否一致，然后提示弹窗刷新页面。没那么复杂，这种实时性要求不高的轮询就够用了
+3. webSocket
+  
+#### 10
+
+nodejs 怎么支持 import
+
+![](https://user-gold-cdn.xitu.io/2019/6/19/16b6d804cfe2c6d5?w=678&h=498&f=png&s=213012)
+
+#### 11
+
+大佬们管理前后端接口文档用什么工具
+
+1. YApi       --------- 人多
+2. swagger
+3. wiki
+4. rap2
+5. vuepress
+  
+
+#### 12
+
+你们知道为啥在vue 项目中 有时候debugger 在谷歌上看不是对应的debugger位置吗。。。
+
+1. 好像脚手架debuggerr调试看到的东西不是真实log出来的东西
+2. 找bug断点 老断到html去
+3. 好像有这种情况 有时候console也不是那个位置
+
+#### 13
+
+老哥们，现在有个需求，两个下拉菜单是  1-1的关系，选一个都会改变另外一个。vue除了watch两个下拉选，还有什么更好的方法吗
+
+1. 不用watch，computed  可以直接直接用组件的@change事件去做逻辑修改 change就足够了
+
+
+#### 14
+
+如何杜绝后端接口返回各种奇葩数据
+
+1. 我这边后端返回如果没有数据的话，我们做的中间层会返回一个{}，node处理好返回过来保证不是乱七八糟的东西
+2. 我这边就是在http请求后做了拦截器 固定了格式
+3. 我们做了ssr，很顺手的起了node服务，所有接口都是客户端发给node，node进行转发
+4. node做网关层其实挺好的
+
+#### 15
+我们都知道组件件传递消息有eventBus和vuex，或者用props等等的方式循环递归去写，那么你还知道有什么更优雅的方式吗
+
+1. websocket分发
+2. cookie，localStorage
