--- a/k-前端狂想录群的日常问题清单以及解决方案/2019-05-上旬.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/2019-05-上旬.md
@@ -1,7 +1,9 @@
 ### NO1
 
 #### 问题描述
-vue 怎么让二级路由和三级路由走同一个 keep-alive
+redux 中存的是 immutable 类型的， 但 redux devtools 调试的时候，为什么能直接看到普通对象呢？
+
+我认为 redux devtools 扩展里面看到的应该也是 immutable 类型 的呀
 
 #### 问题解答
 无法走同一个 keep-alive
@@ -9,6 +11,192 @@ vue 怎么让二级路由和三级路由走同一个 keep-alive
 ### NO2
 
 #### 问题描述
+目前前端界，主流的状态管理方案。比如 vuex redux mobx dva
 
+相同点是什么，不同点是什么。有没有其他好的不为人知的方案
+
+在用完这些方案后的个人感受
 
 #### 问题解答
+Vuex、Flux、Redux、Redux-saga、Dva、MobX
+
+https://zhuanlan.zhihu.com/p/53599723
+
+### 其他问题
+
+
+#### 1
+
+请问如何在node中获取delete方式发起的请求的参数
+
+1. req.body
+2. get也可以从body传  postman可以  axios没试过
+
+
+
+#### 2
+
+你们在vue项目中，如何规范 mixin 的方法和变量的命名规范的？
+
+
+#### 3
+
+大家有没有遇到过vue 的父组件更新prop属性 info.amount 然后子组件监听info.amount 然后父组件修改的时候 不触发子组件的watch
+
+1. 加 deep true watch的深度监听
+
+
+#### 4
+
+有办法用css控制svg的渐变吗，background控制不到svg，很难受，fill可以，但是也只能单色
+
+1. 你试试先写一个渐变的svg 然后将要渐变的svg的url指向他
+
+#### 5
+
+大佬们 如何优雅的判断一个数在某个区间  比如说将 0-360的角度分为8个方向 怎么不用一直都是 if else if
+
+```
+var angles = [
+[0, 45, 'A'],
+[45, 90, 'B'],
+[90, 135, 'C'],
+[135, 180, 'D']
+]
+var num = 88,
+pos;
+for(let i = 0, len = angles.length; i < len; i++) {
+if (num >= angles[i][0] && num < angles[i][1]) {
+pos = angles[i][2];
+break;
+}
+}
+
+console.log(pos)
+```
+
+#### 5
+
+这么一个场景：a页面引入一个js，这个js里面有一些屏蔽键盘事件的方法，然后切换到b页面，怎么消除这个js带来的影响（vue）
+
+1. 在上一个页面的beforedestroy里面，把事件解绑
+
+
+#### 6
+
+在一个svg图片中引入另有一个svg图片应该怎么做？？
+
+多个SVG图形集成到一个SVG图形上 ： https://www.cnblogs.com/Man-Dream-Necessary/p/5715843.html
+
+如果上面的不好使，那用url指向另一个svg试试，看看好不好使  svg css -> url
+
+
+#### 7
+
+移动端1px
+
+1. scale
+
+
+#### 8
+
+rxjs的使用场景
+
+1. 一般多用于时序比较密集的应用吧，像直播，或者在某一个时间段内要处理大量复杂的异步操作
+2. 流程操作易掌控，而且方便统一数据来源，而且还得处理很多异步数据源
+3. 在于数据映射吧。。 rx可以很好地控制变与不变，把一个数据源的内容映射到多个stream里面。然后数据一旦发生变化就能订阅这个stream的数据，
+不用关心怎么变的，只需要管你变了没。
+4. redux 就是rx的一个scan ， rx就是一个util库。rx和redux即使一起用都可以的 就是会比较重
+5. rx做数据映射 redux做数据管理
+6. redux-observable 就是 redux和rx的结合
+
+#### 9 
+
+rx和redux结合有什么best practice吗？
+
+举个示例，类似这样的超时重试就能方便简洁
+
+![](https://user-gold-cdn.xitu.io/2019/6/19/16b6e1ad8ba875f1?w=717&h=616&f=png&s=96725)
+
+#### 10
+
+用hooks的时候每次serState就会触发useEffect 能不能只让他触发一次。我想延迟1s干一件事情 然后不用在触发了  可以我这样写每次每隔一秒都会触发一次  也就是说只要setState了就会触发useEffect
+
+1. 单例模式
+2. https://github.com/streamich/react-use
+3. useEffect第二个参数设为[]
+
+#### 11
+
+你们平时多个项目中的公用组件，除了搭建私服处理以外，还有没其他办法处理？
+
+#### 12
+
+nuxt asyncData里面请求数据   刷新页面就不会重新渲染  有人遇到过嘛
+
+
+#### 13
+
+小的知识点
+
+1. include 里面写的是 组件的 name
+2. 一直觉得组件的name是个鸡肋 都没用过。你用递归组件的时候，也会用到 name
+
+
+#### 14
+
+给数组添加元素的时候，使用concat还是push
+
+1. concat
+2. 扩展符号 [...arr, item]
+
+#### 15
+
+一个方法内有同步、异步操作，该方法在一直循环的情况下，能否让异步操作一直在同步操作之后
+
+1. async await
+
+#### 16
+
+iOS系统下的h5页面滑动卡顿，添加-webkit-overflow-scrolling:touch后，滑动的时候上下定位的元素会被遮挡住
+
+1. 苹果的不要用fixed，要用 position: -webkit-sticky!important;
+
+#### 17
+
+有什么方法可以校验上传到服务器的图片是否完整吗
+
+1. 在客户端和服务端分别做下MD5，比较下两个MD5的值应该是可行的吧~
+2. 做一个上传进度，就知道是否完整了
+3. 强制文件类型检查交给后端去做，前端就扩展名过滤，没有好办法。md5前端做校验已经很重了
+4. 如果一个人负责前后端，那就得分割好边界。如果前端不支持fileReader，连md5都 搞不定。别加太多需求给前端
+
+
+
+#### 18
+
+rn的webview和内嵌的html页面怎么传递给html页面
+
+#### 19
+
+pages/index/index?a=b=123
+请问怎么才能把b=123当作a的属性值拿出来？
+
+```js
+'pages/index/index?a='+encodeURIComponent("b=123")
+```
+
+#### 20
+
+js动画库推荐几个
+
+1. anime.js
+2. gsap.js
+
+
+#### 21
+
+大佬们好，请问一下，本地热开发的时候，这里的模版文件是需要先打包出来的？
+
+1. 这是server端的热加载吧 和前端的包没关系啊？如果你能做到前端热打包 那就没问题了
+
