--- a/k-前端狂想录群的日常问题清单以及解决方案/2019-05-下旬.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/2019-05-下旬.md
@@ -12,3 +12,17 @@ vue 怎么让二级路由和三级路由走同一个 keep-alive
 
 
 #### 问题解答
+
+
+### 其他
+
+#### 1
+
+集成方案
+
+1. github 有 circleCi 和 travisCi
+
+
+#### 2
+
+vue 背景音乐播放一次是怎么个思路
