--- a/k-前端狂想录群的日常问题清单以及解决方案/2019-05-中旬.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/2019-05-中旬.md
@@ -9,6 +9,203 @@ vue 怎么让二级路由和三级路由走同一个 keep-alive
 ### NO2
 
 #### 问题描述
-
+我一个文件夹下面有很多图片，我希望都做preload。有办法一次性import进来么，我不想写那么多文件名
 
 #### 问题解答
+1. vue-lazyload，你值得拥有，图片为什么要import
+2. Webpack有个context，请看webapck文档
+3. 用requireContent的API自己写个webapck插件来解决
+
+
+### 其他问题
+
+#### 1
+
+你们觉得像图标这种资源，应该放在src里面还是外面
+
+1. 看下cli3图片放哪就说明官方推荐放哪
+2. 大的话放外面。小的放里面。
+3. 图标为什么不用iconfont，svg-icon，你值得拥有。妈妈再也不用我的图标影响页面性能啦
+  
+> 你在iconfont上下载你要的图标，然后在那个demo文件里有告诉有Unicode，class和svg三种格式,svg-icon是个vue组件，只是适合vue用。字体图标其实兼容性最好，不过只能单色，svg方案可以做多色，渐变，以及动画。
+
+
+#### 2
+
+想问一下大佬们在多人协作开发项目中，怎么确保每个人的代码都是测试过没有问题的，还有如果其中一个模块上线，别的模块还没开发完怎么处理
+有什么工具可以做这件事吗
+
+1. https://coding.net/
+2. git hooks   每次提交都可以主动触发持续集成
+3. jetbrains有两套工具可以用。如果本地部署的话。一个codereview，一个DevOps
+
+
+#### 3
+
+请教一下，h5监听Android软键盘的弹出和收起可以监听 resize 事件的高度变化来判断。但是嵌套在 app 壳子中失效，有什么办法可以解决？只在 h5 端做修改
+
+1. 让app告诉你，交互一下方法
+2. 我记得H5是拿不到关闭键盘的回调的
+3. 只在 h5 端做修改貌似无解，只得互相配合
+
+#### 4
+
+我有好几个页面特别相同的但是有好几个按钮不同，怎么让它跳转一次路由啊
+
+1. 写成组件，vue用slot，react用prop
+2. 一个页面多重显示效果。那么你就需要一个或者多个判断条件。那么，这些条件从哪里来呢。如果是路由组件，那就带query字符串。如果是普通组件，就绑Props
+
+
+#### 5
+
+a.vue页面有个表格和一个按钮，点击按钮跳转到b.vue页面去添加数据，然后回到a.vue页面table要增加一条数据的，但是created方法没有再执行一次，各位大佬，这是啥问题
+
+
+#### 6
+
+vue做的后台管理 不同用户权限显示不同界面 是使用动态生成路由吗
+
+1. 可以参考antd-pro-vue的写法哈
+2. element-admin的写法应该也差不多，不过还是看antd的比较好
+
+#### 7
+
+有没有大佬熟悉liner-gradient，用了这个属性 竟然在safari滑动会出现拖影，背景使用了liner-gradient
+
+1. 把translate3d改成translate就行了
+2. filter注释掉
+
+#### 8
+
+有人知道vue可以和layui.js一起怎么使用吗？我看官方不支持啊
+
+1. 单纯UI组件可以用，比如vue用数据驱动试图。jq直接操作。
+2. 自己封吧。UI组件没什么问题的。直接上class，功能组件的话，其实也好封。把操作的部分换成数据。
+
+> 我写页面之前先看原型和交互，然后思考一下数据，再设计页面怎么写，哪些写在一起，哪些是分开的。UI和原型他们把每个页面都写出来了。但是我们用Vue的话，其实是可以把多个页面写成一个路由组件。
+
+
+#### 9
+
+v-if和v-for的位置
+
+1. 尽量把v-if放到v-for的父级
+
+#### 10
+
+有没有遇到过在  RN 中 ios  设置zIndex 无效啊。设置了弹出层 zindex在安卓上正常显示，在ios上被背景遮住了
+
+1. 确实存在层叠问题，zindex失效，判断下设备两套style就行。就是一个变量装这个样式，然后按照不同的设备渲染不同的style。
+
+
+> 在ios失效的原因就是你的外层的zidex和内层的zindex的问题。你在判断设备为ios的时候你把外层盒子也设置zindex，比内层的低一级。外层position:"relative",zIndex:19，内层zIndex:20,position:"absolute。必须判断设备不然这样在安卓上就会失效zindex。
+
+
+#### 11
+
+nginx有没有人会，根据cookie打开不同的文件，现在一直404
+
+> https://www.jianshu.com/p/b8fa8adb5119
+
+
+#### 12
+
+有封装过 node 的 child_process 类的小伙伴么，在写一个 vscode 插件, 需要用到进程通信执行第三方的 python 命令。但懒得封装 child_process 了, 看看能不能抄过来
+
+
+#### 13
+
+h5页面A页面跳到B页面，B页面返回A页面 window.history.go(-1)  A页面不刷新是啥原因。vue h5页面 点击返回栏的返回  不刷新上一页面
+
+场景如下图所示
+![](https://user-gold-cdn.xitu.io/2019/6/19/16b6faf1f00225e2?w=1682&h=1282&f=png&s=219025)
+
+1. vue能在进入页面不走生命周期我只能想到keep-alive
+2. keep-alive导致的  去掉这个 在B页面用 window.history.go(-1)这个都可以刷新A页面
+
+```js
+window.addEventListener('popstate',() => {
+ window.location.reload();
+})
+```
+
+
+#### 14
+
+节流和防抖的区别
+
+![](https://user-gold-cdn.xitu.io/2019/6/19/16b6fe2691a37def?w=1806&h=658&f=png&s=64890)
+
+
+![](https://user-gold-cdn.xitu.io/2019/6/19/16b6fe2974daebce?w=1718&h=654&f=png&s=62802)
+
+
+#### 15
+
+怎么比较两个对象是否相等，当一个对象是另一个对象的子对象的时候
+
+1. 有一个很愚蠢的方法，随便遍历其中一个，然后用遍历的 key 去另外一个对象取值，判断值是不是相等
+2. lodash
+3. 通过Object.values(),得到2个对象的值数组，然后去重，得到的数组长度恒等于Object.keys()的长度。就是相等了
+4. stringify
+   
+
+#### 16
+
+我想问下现在hooks能代替class component吗？hooks的方式，怎么创建一个ref呢
+
+#### 17
+
+vw vh，移动端用得多了吗目前？
+
+1. 多，新的移动端适配就用这个，能够像素级还原设计图
+2. vw,vh+rem要比百分比好用，计算好比例，可以直接跟pc端设置多少px一样设置样式，只不过改成rem，很方便的，还原出的设计稿也是最接近的
+3. 可以用插件px2rem，直接写px
+4. rem单位只能分割一个方向，不能同时分割宽度，高度，这样，它就只能替代vw和vh中的一个
+5. rem其实只是一个倍数，跟同时分割宽高没什么关系。。宽度可以用rem，高度也可以。它只是表示相对于根元素字体大小的倍数。跟vw，vh就不是一个类型，也无需相互替代
+6. 横屏的时候没问题，竖屏的时候，vw 和 vh就颠倒了。就乱套了。而rem可以用代码控制，代表横着或者竖着的那个单位，但是，没法模拟两个单位。
+7. 竖屏可以控制的  [H5开发：横屏适配](https://www.jianshu.com/p/b98f5263262b)
+8. 横屏竖屏的样式可以通过响应式控制
+9. 问题是，百分比是相对于父级的，不是相对于整个窗口的，不是很方便，虽然也行。这是响应式高度不定，游戏是宽高固定就是全屏。只能用百分比了看来
+
+#### 18
+
+问老铁们一个问题 为什么 ps中显示的字体是28px 但是我在项目里面写的是 14px才是正常显示呢
+
+1. 适配的问题，要看视觉稿的。选择750px的尺寸就好了。
+2. 推荐几个软件，蓝湖，pxcook
+
+#### 19
+
+前端如何通过 Universal Link 唤起app
+
+1. 你的唤端的前提是需要 app 也支持 Universal Link 吧  https://developer.apple.com/documentation/uikit/inter-process_communication/allowing_apps_and_websites_to_link_to_your_content
+2. 要在safari里面访问这个连接
+
+#### 20
+
+怎么从pug模版中把服务端渲染传过来的数据 传到js中使用
+
+1. 渲染一个script标签，把值存到一个变量里面
+
+```js
+const orders = !{JSON.stringify(orders)};
+```
+
+
+#### 21
+
+微信小程序 我封装了一个授权框在需要授权登陆的页面 但是在一个页面授权后 切换到另一个页面 会有闪一下的感觉，有没有什么方法解决啊。就是第一次切换的时候会出现 再切换就好了
+
+
+#### 22
+
+大佬们，你们是怎么实现小程序的全局状态的管理的？
+
+1. mpvue
+2. wepy-redux
+
+#### 23
+
+我想问一下么让外部变量获取函数内部变量的值，比如让这个nomb1获取到no1的值
+
