--- a/k-前端狂想录群的日常问题清单以及解决方案/狂想群分享的资料和连接.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/狂想群分享的资料和连接.md
@@ -53,3 +53,104 @@
 - url的真谛
 
 ![](https://user-gold-cdn.xitu.io/2019/6/12/16b4b22127706d03?w=1622&h=964&f=png&s=105412)
+
+
+- [ES2015 WeakMap的学习和使用](https://zhuanlan.zhihu.com/p/25454328)
+
+
+- [js内存数据库](http://lokijs.org/#/)
+
+- [WPF MVVM 循序渐进 (从基础到高级)](https://www.oschina.net/translate/wpf-mvvm-step-by-step-basics-to-advance-level?print)
+
+
+- react的表单库 formik
+
+
+- [用 JavaScript 写成的 JavaScript 解释器，意义是什么？](https://www.zhihu.com/question/20004379/answer/18600484)
+
+- [虚拟机随谈（一）：解释器，树遍历解释器，基于栈与基于寄存器，大杂烩](https://rednaxelafx.iteye.com/blog/492667)
+
+- https://github.com/jrainlau/canjs  手写js解释器
+
+- https://www.tslang.cn/docs/handbook/declaration-files/introduction.html
+
+
+- setapp
+
+
+- https://codepen.io/jcoulterdesign/pen/zdwajv
+
+- https://github.com/bosscheng/simple-extend
+
+- vscode检查代码复杂度扩展 codeMetrics
+
+- jest+enzyme也可以测react的
+
+- 由设计稿一键智能生成代码的大厨 https://imgcook.taobao.org/
+
+- 思维导图：mindnode xmind
+
+- 或者用alfred/code snippet也可以快捷键一段代码段
+
+- docker 
+
+- 不是基于 vdom 的 dom diff 库  https://github.com/DylanPiercey/set-dom
+
+- react-admin
+
+- https://github.com/NARKOZ/hacker-scripts
+
+- 封装和抽象的区别是什么 https://www.zhihu.com/question/20266563
+
+- react ts文档 https://github.com/Microsoft/TypeScript-React-Starter
+
+- [2019 年，Rust 与 WebAssembly 将让 Web 开发更美好](https://blog.csdn.net/csdnnews/article/details/86216570)
+
+- [几张图让你看懂WebAssembly](https://www.jianshu.com/p/bff8aa23fe4d)
+
+- https://rustwasm.github.io/docs/book/
+
+- http://www.autopiano.cn/#/
+
+- [快速上手三大基础 React Hooks](https://juejin.im/post/5c8918ca6fb9a049f572023e?utm_source=gold_browser_extension#comment)
+
+- [Flutter 成为多平台框架，支持移动、Web、桌面和嵌入式设备](https://www.oschina.net/news/106527/flutter-io19)
+
+- https://ant.design/docs/spec/colors-cn
+
+- https://github.com/Microsoft/vscode/issues/32257#issuecomment-489474744
+
+- [译] Javascript 中 Array.push 要比 Array.concat 快 945 倍！🤯🤔  https://juejin.im/post/5cd67fb9f265da037129bb64?utm_source=gold_browser_extension
+
+- [一百行js代码实现一个校验工具](https://juejin.im/post/5cc16951e51d45400f5d5852)
+
+- [什么便捷、功能和安全，Chrome一把梭](https://mp.weixin.qq.com/s/3ezqYqumuUzzTVA9uJfkQw)
+
+- [性能为何至关重要](https://developers.google.cn/web/fundamentals/performance/why-performance-matters/)
+
+- [用简单易懂的方式，开发基于VUE的单页应用](https://github.com/chenbimo/yivue)
+
+- https://tomotoes.com/
+
+- https://riccio.gitee.io/panel-magic/#/mock  这个项目就是用 ng 结合 rxjs 写的
+
+- 很好看的ui  https://firenzia.github.io/sakura-ui/views/design/color/
+
+- https://juejin.im/post/591aa14f570c35006961acac#comment  
+- https://panjiachen.github.io/vue-element-admin/#/dashboard
+
+### 好用的工具
+
+1. cache killer
+2. resize
+3. JSON-Handle
+4. tempermonkey
+5. Visual Event
+6. https://github.com/Hammerspoon/hammerspoon
+
+
+### 格式化标准
+
+1. eslint  + Prettier
+2. 如果统一的话。可以弄个规则文件，上传到npm。然后VSCode装个插件，项目上加个prettier
+
