--- a/k-前端狂想录群的日常问题清单以及解决方案/2019-05-下旬.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/2019-05-下旬.md
@@ -9,11 +9,21 @@ vue 怎么让二级路由和三级路由走同一个 keep-alive
 ### NO2
 
 #### 问题描述
+比较复杂的表单 新增和编辑时， 你们是复用一个页面（根据参数做一些变动，编辑时有些字段不能修改 禁用掉）还是两个页面
 
+如果A是提交页面，但是要从BCDEFG多个页面拿值，你们一般怎么处理
+
+那你localStorage 会不会出现页面代码很难维护的情况下，毕竟你如果提交的数据多了呢
 
 #### 问题解答
-
-
+1. 看情况吧，如果复杂表单可以进行一个复用的话，复用当然是最好的，不过既然是复杂表单的话，最主要的还是数据的校验还有数据传递这俩个难点吧
+2. 新增/编辑 两个页面去实现的话， 也会有多层组件传值这种情况（页面拆分了多个组件）
+3. 我刚好才做过，我用的是localStorage 提交前会做验证。每次登录的时候清除localStorage
+4. localStorage 不推荐这个， vue有好多方法啊。 eventBus / vuex / $attrs / provide 但是这样你得考虑页面刷新
+5. 传入对象，一个验证规则，然后遍历对象，根据验证规则判断
+6. 用localstorage封装一个vuex一样的东西
+7. vuex数据保存那个我记得有一个插件，vuex-persist
+8. vuex数据保存那个我记得有一个插件，vuex-along
 ### 其他
 
 #### 1
@@ -26,3 +36,167 @@ vue 怎么让二级路由和三级路由走同一个 keep-alive
 #### 2
 
 vue 背景音乐播放一次是怎么个思路
+
+#### 3
+
+大佬们问个问题呀 做了个H5页面嵌入到原生APP中去  但这个H5页面需要接入微信支付  这个微信支付该怎样做 或者说该由谁来做
+
+1. 在App环境内 肯定是App客户端做
+2. H5只能做微信js 或者跳转到weixinwap 然后打开微信吧
+3. 一般都是中间页跳微信
+4. 全由H5来做是不可能的
+5. 通过访问一个URL，然后native做拦截，调起支付。这个其实和扫描二维码是一样的
+6. 微信jssdk,里面有支付。最终都是调起微信
+7. 这个是h5做，客户端拦截scheme调起微信或者支付宝
+
+
+#### 4
+
+各位大佬有了解rxjs的么。能否分享下最佳实践的文章或者心得呢？看样子rx6用管道代替了链式操作。请问这是为什么呢？
+
+1. https://zhuanlan.zhihu.com/p/45005457
+2. 链式其实是把所有操作装到了一个Class上面，比较臃肿，不易于扩展
+
+
+#### 5
+
+有写过vscode 插件开发的小伙伴么
+
+
+#### 6
+
+后端给的数据格式不一致，是不是前台要处理啊
+
+1. 前端想统一处理，那就在拦截器里面做
+2. 后端也要进行统一中间件处理
+
+#### 7
+
+好用的 react 表单库
+
+1. UForm
+
+
+#### 8
+
+各位大佬 请教个问题：页面里的图片在浏览器和安卓手机里面显示正常，但是在苹果手机里面有一部分不显示，有没有遇到过的或者知道怎么回事的？图片时base64格式的。
+
+1. https://github.com/google/ios-webkit-debug-proxy
+2. 如果是系统问题，就开模拟器。调试
+
+#### 9
+
+国内代码托管网站怎么选择
+
+1. 外包和私人项目放coding，开源的放码云
+2. coding不关注个人版，只关注企业
+
+#### 10
+
+中后台的技术方案
+
+1. umi搭中后台
+2. 中台：搭建系统，PC Weex h5 小程序 原生搭建
+3. fusion比较重，不能拆小包
+4. PC 无线统一搭建，也支持h5搭建，小程序原生搭建
+5. 无线用rax
+6. 后台系统用到 node redis metaq
+
+#### 11
+
+骨架屏的技术方案
+
+1. 将数据和组件打到页面上，然后在前端渲染
+2. 不直出html
+3. 服务端没有CPU计算的压力
+
+
+#### 12
+vue验证用什么，之前用的vue-validate，感觉不是很好
+
+1. 自己写vertify函数更方便
+
+
+#### 13
+
+3.0有没有什么移动端的ui库，可以直接通过vue插件安装的那种
+
+1. 移动端用vant 不要用vux minit-ui。这几个都不行了
+2. iview主要是那种后台管理的，PC。我现在改的这个不是后台管理，是一个webApp
+
+#### 14
+
+大佬们，nuxt服务端渲染，压测时nodejs cpu 使用率特别高，从哪方面入手解决啊
+
+1. node性能分析工具，我觉得可能是编译生成字符串这块挺耗cpu的
+2. 之前有看到一篇基于egg的ssr性能分析的文章，可以用 alinode 在渲染的各个阶段做快照 看看哪些阶段cpu任务比较繁重
+
+#### 15
+
+打扰下，咨询个问题， 我们做的vue项目打包后，能获取到vue实例吗，现在公司想留个后门万一出现问题，重写里面的方法
+
+1. window.vm = new Vue
+
+
+#### 16
+
+咨询一下vue项目中嵌套 iframe 为什么页面不显示
+
+1. 高度问题
+
+#### 17
+
+这两个state区别在哪儿啊，一直都是写下边的这种，今天看到上面的写法
+
+![](https://user-gold-cdn.xitu.io/2019/6/20/16b70d64026fd6d7?w=408&h=510&f=png&s=212505)
+
+1. http://es6.ruanyifeng.com/#docs/class
+
+
+#### 18
+
+WEEX EN FLUTTER 
+
+1. flutter 不能热更新
+2. rn可以热更新
+
+
+#### 19
+
+css 有没有样式 可以让俩个叠加 就是比如一个一个红色区域与蓝色区域 重叠区域颜色是叠加起来的
+
+1. css混合模式 https://developer.mozilla.org/zh-CN/docs/Web/CSS/blend-mode
+
+#### 20
+
+大佬们 问个问题， vue-router动态路由，顶级路由下有两个动态路由，这个顶级路由的redirect怎么写?
+
+1. 再包裹一层
+
+![](https://user-gold-cdn.xitu.io/2019/6/20/16b70ed5cc32474a?w=739&h=588&f=png&s=292840)
+
+
+#### 21
+
+小程序的上拉加载数据有什么优化方式没，现在用的是concat追加方式，现在有分类数据很多，超过了setData的最大值，并且最后越来越卡
+
+1. https://juejin.im/post/5ca08a3f6fb9a05e4f057a47
+
+#### 22
+
+大佬们，后端跟我说配置了Nginx但是还是有跨域，是我前端需要在webpack中再做什么配置吗。已经是线上的包了
+
+1. webpack配置的proxy又不会对生产有影响，还是你nginx配错了
+2. https://github.com/bosscheng/element-starter2/blob/master/build/preview.js
+3. 跨域一般只要http服务器改就行，nginx配置那块发出来看一下
+4. http://oskarhane.com/avoid-cors-with-nginx-proxy_pass/
+
+
+#### 23
+
+最近在做图片上传 我们后端要我直接吧图片的流传过去
+
+1. js可以把图片转换成blob啊，fileReader接口就是blob，file本身就是blob的子类
+2. 不传流你传啥
+3. 传base64
+4. 那就是在before-upload钩子里处理那个文件，转换成blob,然后自己发ajax
