--- a/k-前端狂想录群的日常问题清单以及解决方案/2019-06-上旬.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/2019-06-上旬.md
@@ -1,7 +1,7 @@
 ### NO1
 
 #### 问题描述
-vue 怎么让二级路由和三级路由走同一个 keep-alive
+请问一下 vue里面用template包裹元素 template本身不会渲染dom节点。react里面对应template的是什么来着了？
 
 #### 问题解答
 无法走同一个 keep-alive
@@ -12,3 +12,150 @@ vue 怎么让二级路由和三级路由走同一个 keep-alive
 
 
 #### 问题解答
+
+
+### 其他问题
+
+#### 1
+
+前端自动化打包部署的方案
+
+1. jenkins
+
+#### 2
+
+axios跨域，jq不跨域
+
+1. axios会先发一个options请求，jq不会。所以options请求需要后端去配置
+
+
+#### 3
+
+群里有知道，webpack里如何单纯引入js，有种直接合并，不搞模块化。我只想部分js单纯合进去
+
+1. 安装commjs方式写代码，配置一下webpack.config.js，运行webpack命令，所有的js文件就能打包成一个js文件
+2. 你在babel-loader的时候，加入相应的文件，忽略掉不行吗。exclude
+
+
+#### 4
+
+如何学习css
+
+#### 5
+
+h5唤起录像机抓取视频中的任何一帧的照片可以实现不。就是需求就是用户要类似支付宝那种眨眨眼 抬抬头去判断活体
+
+1. 我记得firebox有个插件，能监控canvas走到那一帧了
+2. 试试先暂停，然后截图，我记得好像有js截图的工具
+3. webRTC应该可以。 就是用getUserMedia打开摄像头，然后把流地址给video，需要拍照的时候用canvas的drawImage把video绘制到画布。视频能播放，但是不是录像
+4. 随机拍照，识别图片，我的思路是这样的
+
+
+#### 6
+
+nodejs数据库连接，入口文件require引入的时候，如何保证mysql已经连接上了？
+
+1. 你不需要require的时候保障连接上了，你需要在操作数据库的时候保障连接上了，然后把增删改查相应的方法暴露出来
+2. 还有一种，就是遍历类的方法，把数据库连接写成前置钩子，执行完再执行真正的函数
+3. mysql不是很清楚，说不定人家的api里已经判断过了，一般情况可以把判断是否链接封装成一个Promise
+4. 连接成功再进行下一步，没成功直接reject,返回个message就行了。
+
+#### 7
+
+问大家一个问题，像微信聊天列表这样很顺滑的上拉加载和下拉加载，是怎么实现的，web能实现吗，最近也在搞聊天，发现做不到微信这样的
+
+
+1. 因为原生的列表做了优化
+2. 原生的上拉加载体验肯定是web不能比的
+
+#### 8
+
+请教各位大佬，小程序canvas海报图，如何适配各个设备。（我目前是：根据设备的windowsWidth、windowsHeight，根据设计稿ios6（375*603）进行比例是适配的。iphonex则是1448rpx
+
+#### 9
+
+大佬们，前端直传oss给服务器回调 和  前端上传服务器再上传oss
+
+1. 直传oss
+
+
+#### 10
+
+我用了动态组件切换页面，怎么在切换的时候加上动画。我的问题是我这是个圣杯布局，上面和中间各是一个动态组件，两个同时加transition可以吗？
+
+1. 在app.vue里，Transiton  包裹动态组件，或者在根组件的RooterView中用 Transiton 包裹。就有动画了
+2. 动态组件component那边套transition试试，router-view管不到这儿
+
+#### 11
+
+比如说一个抽奖，今天是圆盘，明天是九宫格，怎么通用
+
+1. 业务逻辑可以封装，ui可以A/B引入
+
+#### 12
+
+富文本编辑器，前台怎么给后台传数据
+
+请求头的格式：text/plain
+
+两种方案：
+
+1. 图片前端上传，直传OSS或者给后台接口，返回图片路径，写入最后提交的数据，再全部提交给后台。
+2. post，请求。第一个域是html文本。里面有插值。后面的域是图片。又后台去处理。
+3. 传base64就过分了。
+
+#### 13
+
+nuxt 种怎么启用css autoprefix
+
+1. 新版本采用对象语法 nuxt.config.js
+
+
+#### 14
+
+不是定位失效，目前3个动画，底部淡入，图片旋转放大，然后还有个，如果我在这个动画上面在定位一个东西，动画就失效了，为什么啊。还有这个有个弹动效果，如果加了这个，第二个旋转放大的动画就失效了
+
+1. https://www.jianshu.com/p/5eeb1e0ab87d
+
+#### 15
+
+:class="{   item.class[0]    : item.class[1]}"  这种写法好像不行。
+
+```js
+:class="{   [item.class[0]]    : item.class[1]}"
+```
+
+```js
+:class="{   `${item.class[0]}`: item.class[1]}"
+```
+
+#### 16
+
+关于yarn.lock文件
+
+刚才说到yarn.lock文件问题，如果你是项目负责人，能负责小版本的升级那你可以选择代码提交时一起更新，不是的话不建议。这么说吧，服务器上的lock文件你只适合你拉取，不适合你更新，你要是能决定项目就随便更新
+
+一般使用别人的包都是直接用的，包模块出问题叫项目主要负责人改或者更新，新人自己更新提交不乱套了吗
+
+提交了也不一定合并到主分支了，你们没用git flow吗，merge没人审核吗。如果不提交，比如你这边用了一个包版本0.1，过几天这个包作者升级了0.2，api全部变了
+
+所以稳妥起见不建议对lock进行提交，当然了，你把代码发布的时候一定要有lock文件的
+
+#### 17
+
+刷新页面，还停留在对应的页面位置
+
+1. query，然后传到钩子函数中，进行处理
+
+#### 18
+
+部署到容器的测试环境，怎么查看前端日志
+
+1. dockers logs命令
+
+
+#### 19
+
+nodejs和java做服务端渲染哪个处理请求的速度更快
+
+1. ssr是cpu密集型计算
