--- a/k-前端狂想录群的日常问题清单以及解决方案/2019-06-中旬.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/2019-06-中旬.md
@@ -12,3 +12,44 @@ vue 怎么让二级路由和三级路由走同一个 keep-alive
 
 
 #### 问题解答
+
+
+### 其他问题
+
+#### 1
+
+有没有办法在组件中获取到全局注册的filter
+
+1. 换种思路，把filter函数抽出来，哪里需要哪里导
+2. 可以注册到全局直接用，不需要每次都引
+
+![](https://user-gold-cdn.xitu.io/2019/6/20/16b71467c15e2ffe?w=1080&h=1920&f=png&s=279819)
+
+
+#### 2
+
+小程序可以做报表么
+
+1. 可以
+
+
+#### 3
+
+大佬们  有做过地图下钻的吗
+
+
+![](https://user-gold-cdn.xitu.io/2019/6/20/16b7149c851435f5?w=994&h=584&f=png&s=121169)
+
+1. https://gallery.echartsjs.com/editor.html?c=xbxUJPSiG9
+2. https://gallery.echartsjs.com/explore.html#sort=rank~timeframe=all~author=all
+
+
+#### 4
+
+有什么vue插件可以做流程图
+
+#### 5
+
+dva跳二级路由 页面得刷新一下才出来 有大佬知道怎么回事吗
+
+1. 因为路由数据改了以后，connect内部有一个类似shouldcmpupdate的东西返回了false不允许更新，对路由信息不敏感了
