--- a/k-前端狂想录群的日常问题清单以及解决方案/狂想群分享的资料和连接.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/狂想群分享的资料和连接.md
@@ -139,6 +139,16 @@
 - https://juejin.im/post/591aa14f570c35006961acac#comment  
 - https://panjiachen.github.io/vue-element-admin/#/dashboard
 
+- 《D2日报》 或 《前端日报》 https://daily.fairyever.com/
+
+- https://d2admin.fairyever.com/#/index
+
+- [调试iOS H5 项目的另一种选择-ios-webkit-debug-proxy](https://www.jianshu.com/p/4d05f36f6538)
+
+- https://midwayjs.org/midway/ 
+
+- https://github.com/bosscheng/suning-share-resource/blob/master/WEEX%E7%BB%84%E4%BB%B6%E5%8A%A8%E6%80%81%E6%9E%84%E5%BB%BA%E5%AE%9E%E8%B7%B5.pdf
+
 ### 好用的工具
 
 1. cache killer
